[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/characters/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://entities/weapons/guns/gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/characters/enemy/enemy.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.2112

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
slot_1 = ExtResource( 2 )
speed = 120
detect_radius = 400
FOV = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]

[node name="debug" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 22.0
text = "0"
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
